fixing tab spacing maybe
git-svn-id: http://svn.dojotoolkit.org/src/trunk@3998 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/documents/web0.3/css/index.css
+++ b/documents/web0.3/css/index.css
@@ -50,7 +50,7 @@
 	width:100%;
 	min-height:450px;
 	background: url("../img/summerStripe.gif") top left repeat-x; 
-	padding-top:5px; 
+	padding-top:9px; 
 }
 * html #body{
 	height:100%;
